initial implementation for recommendation service. added CBF recommendation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,6 @@ spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
 jwt.access.secret.key={{ACCESS_SECRET}}
+
+url.collection={{COLLECTION_SERVICE_URL}}
+url.fragrance={{FRAGRANCE_SERVICE_URL}}
