--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,8 @@ spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
 jwt.access.secret.key={{ACCESS_SECRET}}
+jwt.internal.fragrance.secret.key={{INTERNAL_FRAGRANCE_SECRET}}
+jwt.internal.collection.secret.key={{INTERNAL_COLLECTION_SECRET}}
 
 url.collection={{COLLECTION_SERVICE_URL}}
 url.fragrance={{FRAGRANCE_SERVICE_URL}}
