added cf recommendation (in progress)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,8 @@ spring.datasource.hikari.max-lifetime=1800000
 jwt.access.secret.key={{ACCESS_SECRET}}
 jwt.internal.fragrance.secret.key={{INTERNAL_FRAGRANCE_SECRET}}
 jwt.internal.collection.secret.key={{INTERNAL_COLLECTION_SECRET}}
+jwt.internal.review.secret.key={{INTERNAL_REVIEW_SECRET}}
 
 url.collection={{COLLECTION_SERVICE_URL}}
 url.fragrance={{FRAGRANCE_SERVICE_URL}}
+url.review={{REVIEWS_SERVICE_URL}}
