--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.web.resources.add-mappings=false
 
 # Database connection URL
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/aromatica}
-spring.datasource.username={{DB_USERNAME}}
-spring.datasource.password={{DB_PASSWORD}}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # PostgreSQL driver class name
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -30,11 +30,11 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=600000
 spring.datasource.hikari.max-lifetime=1800000
 
-jwt.access.secret.key={{ACCESS_SECRET}}
-jwt.internal.fragrance.secret.key={{INTERNAL_FRAGRANCE_SECRET}}
-jwt.internal.collection.secret.key={{INTERNAL_COLLECTION_SECRET}}
-jwt.internal.review.secret.key={{INTERNAL_REVIEW_SECRET}}
+jwt.access.secret.key=${ACCESS_SECRET}
+jwt.internal.fragrance.secret.key=${INTERNAL_FRAGRANCE_SECRET}
+jwt.internal.collection.secret.key=${INTERNAL_COLLECTION_SECRET}
+jwt.internal.review.secret.key=${INTERNAL_REVIEW_SECRET}
 
-url.collection={{COLLECTION_SERVICE_URL}}
-url.fragrance={{FRAGRANCE_SERVICE_URL}}
-url.review={{REVIEWS_SERVICE_URL}}
+url.collection=${COLLECTION_SERVICE_URL}
+url.fragrance=${FRAGRANCE_SERVICE_URL}
+url.review=${REVIEWS_SERVICE_URL}
